--- a/MiniSupermarket/Properties/Resources.resx
+++ b/MiniSupermarket/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="update" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ImageAndFont\update.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="reloading" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ImageAndFont\reloading.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
